--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
