--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@expo/vector-icons": "^14.0.4",
     "expo": "~51.0.18",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
